set focus to text input field by default

--- a/chatbot/pom.xml
+++ b/chatbot/pom.xml
@@ -15,7 +15,7 @@
         <configuration>
             <archive>
             <manifest>
-                <mainClass>fully.qualified.MainClass</mainClass>
+                <mainClass>com.ursugoiangel.Main</mainClass>
             </manifest>
             </archive>
             <descriptorRefs>
